# pulsar-contracts

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  ISSUES.md  LICENSE  MISC_007_PR_DESCRIPTION.md  MISC_009_PR_DESCRIPTION.md  MISC_009_SUMMARY.md  PR_DETAILS.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  docker-compose.yml
.github/: pull_request_template.md
api/: .env.example  README.md  package.json
config/: README.md  local.toml  mainnet.toml  testnet.toml
contracts/payment-processing-contract/: Cargo.toml
contracts/payment-processing-contract/src/: archival.rs  audit.rs  data_quality.rs  error.rs  global_stats_tests.rs  helper.rs  lib.rs  pool.rs  prop_tests.rs  repro_tests.rs  request_validation.rs  response_formatting.rs  storage.rs  test.rs  types.rs  webhook.rs
contracts/payment-processing-contract/test_snapshots/global_stats_tests/: test_get_global_payment_stats_both_filters.1.json  test_get_global_payment_stats_empty_range.1.json  test_get_global_payment_stats_end_only.1.json  test_get_global_payment_stats_no_filter.1.json  test_get_global_payment_stats_start_only.1.json
contracts/payment-processing-contract/test_snapshots/repro_tests/: test_approve_refund_unauthorized_fails.1.json  test_initiate_multisig_duplicate_signer_fails.1.json  test_initiate_multisig_max_signers_exceeded.1.json  test_pagination_cursor_inverted.1.json
contracts/payment-processing-contract/test_snapshots/test/: test_approve_refund_unauthorized_fails.1.json  test_archive_payment_record_non_admin_fails.1.json  test_archive_payment_record_removes_from_indexes.1.json  test_cleanup_all_expired_clears_index.1.json  test_cleanup_expired_payments.1.json  test_cleanup_no_expired_returns_zero.1.json  test_cleanup_non_admin_unauthorized.1.json  test_cleanup_some_expired_only_removes_expired.1.json  test_concurrent_refunds_exceeding_limit_second_rejected.1.json  test_concurrent_refunds_within_limit_both_succeed.1.json  test_deactivate_merchant.1.json  test_duplicate_payment_fails.1.json  test_execute_refund_unauthorized_fails.1.json  test_full_refund_flow_with_balance_assertions.1.json  test_get_global_payment_stats_date_filters_all_and_none.1.json  test_get_global_stats.1.json  test_get_global_stats_with_filtering.1.json  test_get_merchant_payment_history.1.json  test_get_version_after_set_admin.1.json  test_global_stats_overflow_fails.1.json  test_initiate_multisig_duplicate_signer_fails.1.json  test_initiate_multisig_payment_success.1.json  test_large_payment_index_growth.1.json  test_multisig_insufficient_signatures_fails.1.json  test_multisig_payment_expiry.1.json  test_payer_history_filter_amount_range.1.json  test_payer_history_filter_by_status.1.json  test_payer_history_filter_by_token.1.json  test_payer_history_filter_date_range.1.json  test_payer_history_multiple_payments.1.json  test_payer_history_no_payments.1.json  test_payer_history_pagination.1.json  test_payer_history_single_payment.1.json  test_payer_history_sort_by_amount_ascending.1.json  test_payer_history_sort_by_amount_descending.1.json  test_payer_history_sort_by_date_ascending.1.json  test_payer_history_sort_by_date_descending.1.json  test_payment_expired_fails.1.json  test_payment_payer_mismatch_fails.1.json  test_reactivate_merchant_success.1.json  (+19 more)
dashboard/: README.md  package.json
db/: README.md  migrate.js  package.json  schema.sql
docs/: ANALYTICS_GUIDE.md  ARCHITECTURE.md  BATCH_PROCESSING_IMPLEMENTATION.md  CATEGORY_MIGRATION_GUIDE.md  DATA_VALIDATION_RULES.md  DB_BACKUP_STRATEGY.md  DEVELOPMENT.md  FULL_TEXT_SEARCH_IMPLEMENTATION.md  LICENSE_HEADERS.md  MERCHANT_INTEGRATION_GUIDE.md  SECURITY.md  SEEDING_GUIDE.md  SUBSCRIPTION_PAYMENT_SERVICE_IMPLEMENTATION.md  analytics.md  backup-verification.md  devops.md  (+14 more)
services/batch-processing-service/: Cargo.toml  README.md  schema.sql
services/batch-processing-service/src/: config.rs  error.rs  job.rs  lib.rs  queue.rs  scheduler.rs  status.rs
services/circuit-breaker-service/: Cargo.toml
services/circuit-breaker-service/src/: lib.rs
services/data-export-service/: Cargo.toml
services/data-export-service/src/: lib.rs
services/multisig-payment-service/: Cargo.toml
services/multisig-payment-service/src/: lib.rs
services/payment-processing-service/: Cargo.toml
services/payment-processing-service/src/: lib.rs  tests.rs
services/subscription-payment-service/: Cargo.toml  README.md  schema.sql
services/subscription-payment-service/src/: config.rs  error.rs  events.rs  invoice.rs  lib.rs  models.rs  payment.rs  scheduler.rs
(+306 files in other folders)
