[package]
name = "payment-processing-contract"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Contributors"]
description = "Scalable, secure, and decentralized payment processing smart contract for Soroban Stellar"
license = "MIT"
repository = "https://github.com/devEunicee/pulsar-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils", "alloc"] }
ed25519-dalek = { version = "2.2.0", default-features = false }

[features]
testutils = ["soroban-sdk/testutils"]
