[package]
name = "circuit-breaker-service"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Contributors"]
description = "Circuit breaker utility service for Pulsar off-chain integrations"
license = "MIT"
repository = "https://github.com/devEunicee/pulsar-contracts"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[dev-dependencies]
serde_json = "1.0"
