[package]
name = "data-export-service"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Contributors"]
description = "Off-chain data export service for Pulsar payment contract data"
license = "MIT"
repository = "https://github.com/devEunicee/pulsar-contracts"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
serde_yaml = "0.9"
